--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".application.NMediaApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,11 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".application.NMediaApplication"
         android:usesCleartextTraffic="${usesCleartextTraffic}">
         <activity
             android:name=".ui.AppActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name">
             <nav-graph android:value="@navigation/nav_main" />
 
             <intent-filter>
